[gd_scene load_steps=6 format=2]

[ext_resource path="res://Script/MonsterBoss4.gd" type="Script" id=1]
[ext_resource path="res://Asset/Anim/tres/boss4.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Scene/UI/MonsterHealthbar.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 18.0
height = 35.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 36, 40 )

[node name="Boss4" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )
attack_frame = 6
HEALTH = 400

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
shape = SubResource( 1 )

[node name="CheckFloor" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 25 )

[node name="PPlayer" type="Node2D" parent="."]
position = Vector2( 0, 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="PPlayer"]
position = Vector2( -2, -20 )
scale = Vector2( 1.3, 1.3 )
frames = ExtResource( 2 )
animation = "spit"
frame = 1
playing = true

[node name="Area2D" type="Area2D" parent="PPlayer"]
position = Vector2( 22, -2 )
collision_layer = 0
collision_mask = 8

[node name="Atck_Col" type="CollisionShape2D" parent="PPlayer/Area2D"]
position = Vector2( -2, -18 )
shape = SubResource( 2 )
disabled = true

[node name="SpitPos" type="Position2D" parent="PPlayer"]
position = Vector2( 24, -36 )

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
position = Vector2( -48, -64 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="animation_finished" from="PPlayer/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="PPlayer/AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="body_entered" from="PPlayer/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
